--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,10 @@
   font-family: "BabyGirl";
   src: url("fonts/BabyGirl.otf");
 }
+@font-face {
+  font-family: "RobotoMono";
+  src: url("fonts/RobotoMono.ttf");
+}
 #root {
   height: 100vh;
   width: 100vw;
@@ -24,11 +28,14 @@ body {
   width: 100vw;
   height: 100vh;
 }
-img {
+
+.image {
   height: 500px;
+  width: 55vw;
   margin-top: 50px;
   border-radius: 10px;
-  border: none;
+  background-size: cover;
+  background-position: center;
 }
 .app {
   display: flex;
@@ -53,6 +60,30 @@ img {
 .text {
   color: white;
   margin: 2% 0px;
+}
+.error-div {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+  align-items: left;
+  justify-content: center;
+  height: 100vh;
+  width: 65vw;
+}
+#err {
+  font-family: "Arial";
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.error {
+  background: #f6f8fa;
+  line-height: 30px;
+  border-radius: 5px;
+  font-family: "RobotoMono";
+  font-size: 17px;
+  color: black;
+  padding: 20px 25px;
 }
 
 .quote {
@@ -81,12 +112,7 @@ button {
   cursor: pointer;
   font-weight: bold;
 }
-.error {
-  position: absolute;
-  top: 40%;
-  font-size: 25px;
-  color: white;
-}
+
 .loading {
   display: flex;
   align-items: center;
@@ -103,6 +129,85 @@ button {
     spinner-oaa3wk 1.6s infinite linear;
 }
 
+@media (max-width: 1200px) {
+  .image {
+    width: 70vw;
+  }
+  #load {
+    margin-bottom: 80px;
+  }
+}
+@media (max-width: 920px) {
+  #load {
+    margin-bottom: 300px;
+  }
+}
+@media (max-width: 820px) {
+  button {
+    right: 50%;
+    transform: translateX(50%);
+    bottom: 50px;
+  }
+  .image {
+    height: 400px;
+  }
+}
+
+@media (max-width: 780px) {
+  .image {
+    height: 300px;
+  }
+  #load {
+    margin-bottom: 400px;
+  }
+}
+@media (max-width: 690px) {
+  #load {
+    margin-bottom: 500px;
+  }
+  .sp-div {
+    margin-bottom: 150px;
+  }
+  button {
+    bottom: 150px;
+  }
+}
+@media (max-width: 500px) {
+  .image {
+    width: 90vw;
+    height: 230px;
+
+    margin-top: 100px;
+  }
+  .loading {
+    height: 100px;
+  }
+  #load {
+    margin-bottom: 570px;
+  }
+  button {
+    bottom: 100px;
+  }
+  .quote {
+    font-size: 18px;
+    width: 90vw;
+    max-height: 200px;
+  }
+  .text {
+    margin-top: 30px;
+  }
+  #err {
+    font-size: 16px;
+  }
+  .error {
+    font-size: 18px;
+    width: 70vw;
+  }
+  .error-div {
+    width: 90vw;
+    align-items: center;
+  }
+}
 @keyframes spinner-bulqg1 {
   0% {
     clip-path: polygon(50% 50%, 0 0, 50% 0%, 50% 0%, 50% 0%, 50% 0%, 50% 0%);
