--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,7 @@ body {
   filter: blur(10px);
   width: 100vw;
   height: 100vh;
+  background-position: center;
 
   position: absolute;
   top: 0px;
