--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@
   src: url("fonts/RobotoMono.ttf");
 }
 #root {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
 }
 * {
@@ -26,7 +26,7 @@
 body {
   font-family: sans-serif;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
 }
 
 .image {
@@ -42,16 +42,15 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   background: black;
   z-index: 99;
-  overflow: hidden;
 }
 .container {
   filter: blur(10px);
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-position: center;
 
   position: absolute;
@@ -70,7 +69,7 @@ body {
   font-size: 25px;
   align-items: left;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   width: 65vw;
 }
 #err {
